# di-dep-kafka-connect

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-nginx  NAIS_DEPLOY_PREREQ.md  README.md  build.gradle.kts  deployment.json  jmx-kafka-connect-prometheus.yml  nais-ui.yaml  nais.yaml  nginx.conf  nginx.conf.template  run-jmx-prometheus.sh  run.sh  settings.gradle.kts
.circleci/: config.yml  di-dep-ci.key.pem.enc  github.key.pem.enc
.github/workflows/: codeql-analysis.yml  detekt.yml  main.yml
nais/: alerts.yaml  dev-vars.yaml  kafkaconnect.yaml  kafkaconnectui-dev.yaml  kafkaconnectui-prod.yaml  kafkaconnectui.yaml  nais-dev.yaml  nais-prod.yaml  prod-vars.yaml
s6/connect/: finish  run
s6/jmx_exporter/: finish  run
s6/nginx/: finish
testing/: README.md  data.json  datawithoutvault.json  docker-compose.yaml  example-connector-configs.txt  jmx-kafka-connect-prometheus.yml
testing/connect-test/: .gitignore  README.md  pyproject.toml
testing/connect-test/connect_test/: complex_schema_connector.py  complex_type_schema_producer.py  compose.py  config.py  connector.py  flat_schema_connector.py  flat_schema_producer.py  nested_complex_schema_connector.py  nested_complex_type_schema_producer.py
testing/connect-test/tests/: test_kakfa_connect.py
testing/secrets/: api.htpasswd  schema.registry
travis/: deploy.sh  di-dep-ci.key.pem.enc
