[tool.poetry]
name = "connect-test"
version = "0.1.0"
description = ""
authors = ["Sondre Halvorsen <Sondre.Halvorsen@nav.no>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
confluent-kafka = {extras = ["avro"], version = "^1.3.0"}


[tool.poetry.dev-dependencies]
pytest = "^4.6"
hvac = {version = "^0.10.2", extras = ["parser"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
